<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_products"
        android:icon="@drawable/ic_products_black_24dp"
        android:title="@string/title_products" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_carts_black_24dp"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_login"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/title_login" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/title_user" />

</menu>